[gd_scene load_steps=105 format=2]

[ext_resource path="res://assets/Shaders/WhiteColor.shader" type="Shader" id=1]
[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Enemies/Crow/Crow.gd" type="Script" id=10]
[ext_resource path="res://assets/Enemies/Crow/CrowStats.gd" type="Script" id=11]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Audio/Enemies/Crow/Crow_caw.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=14]
[ext_resource path="res://assets/Shadows/MediumShadow.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies/Crow/Crow.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemies/Crow/Crow_eye.png" type="Texture" id=17]
[ext_resource path="res://assets/Enemies/PlayerDetectionZoneFlyer.gd" type="Script" id=18]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 17 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 17 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 17 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 17 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 17 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 17 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 17 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 17 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 17 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 17 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 17 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 17 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 17 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 17 )
region = Rect2( 384, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 17 )
region = Rect2( 432, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 17 )
region = Rect2( 480, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 17 )
region = Rect2( 528, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=28]
radius = 6.0

[sub_resource type="Animation" id=106]
resource_name = "Caw"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 12, 13 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=29]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 3, 10 ]
}

[sub_resource type="Animation" id=30]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -28 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -18 ) ]
}

[sub_resource type="Animation" id=31]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=32]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_flying"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -14 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=33]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "idle_animation"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=34]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=35]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=36]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AnimatedSpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_flying"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -10 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=107]
animation = "Caw"

[sub_resource type="AnimationNodeTimeScale" id=74]

[sub_resource type="AnimationNodeBlendTree" id=75]
nodes/Animation/node = SubResource( 107 )
nodes/Animation/position = Vector2( 40, 180 )
nodes/TimeScale/node = SubResource( 74 )
nodes/TimeScale/position = Vector2( 189, 172 )
nodes/output/position = Vector2( 360, 180 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=108]
animation = "Dead"

[sub_resource type="AnimationNodeTimeScale" id=70]

[sub_resource type="AnimationNodeBlendTree" id=71]
nodes/Animation/node = SubResource( 108 )
nodes/Animation/position = Vector2( -20, 180 )
nodes/TimeScale/node = SubResource( 70 )
nodes/TimeScale/position = Vector2( 134, 190 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=109]
animation = "Fly"

[sub_resource type="AnimationNodeTimeScale" id=72]

[sub_resource type="AnimationNodeBlendTree" id=73]
nodes/Animation/node = SubResource( 109 )
nodes/Animation/position = Vector2( 13, 191 )
nodes/TimeScale/node = SubResource( 72 )
nodes/TimeScale/position = Vector2( 180, 160 )
nodes/output/position = Vector2( 340, 160 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=110]
animation = "Idle"

[sub_resource type="AnimationNodeTimeScale" id=97]

[sub_resource type="AnimationNodeBlendTree" id=98]
nodes/Animation/node = SubResource( 110 )
nodes/Animation/position = Vector2( 68, 185 )
nodes/TimeScale/node = SubResource( 97 )
nodes/TimeScale/position = Vector2( 260, 140 )
nodes/output/position = Vector2( 480, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=111]
animation = "Landing"

[sub_resource type="AnimationNodeTimeScale" id=76]

[sub_resource type="AnimationNodeBlendTree" id=77]
nodes/Animation/node = SubResource( 111 )
nodes/Animation/position = Vector2( 120, 140 )
nodes/TimeScale/node = SubResource( 76 )
nodes/TimeScale/position = Vector2( 320, 140 )
nodes/output/position = Vector2( 480, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=112]
animation = "Peck"

[sub_resource type="AnimationNodeTimeScale" id=78]

[sub_resource type="AnimationNodeBlendTree" id=79]
nodes/Animation/node = SubResource( 112 )
nodes/Animation/position = Vector2( 0, 160 )
nodes/TimeScale/node = SubResource( 78 )
nodes/TimeScale/position = Vector2( 181, 167 )
nodes/output/position = Vector2( 360, 180 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=113]
animation = "Takeoff"

[sub_resource type="AnimationNodeTimeScale" id=80]

[sub_resource type="AnimationNodeBlendTree" id=81]
nodes/Animation/node = SubResource( 113 )
nodes/Animation/position = Vector2( 104, 108 )
nodes/TimeScale/node = SubResource( 80 )
nodes/TimeScale/position = Vector2( 323, 165 )
nodes/output/position = Vector2( 580, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]

[sub_resource type="AnimationNodeStateMachineTransition" id=88]

[sub_resource type="AnimationNodeStateMachineTransition" id=89]

[sub_resource type="AnimationNodeStateMachineTransition" id=90]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=91]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=92]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=93]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=99]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=100]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=101]

[sub_resource type="AnimationNodeStateMachineTransition" id=102]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=103]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=104]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=105]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=95]
states/Caw/node = SubResource( 75 )
states/Caw/position = Vector2( 53.213, -58.5519 )
states/Dead/node = SubResource( 71 )
states/Dead/position = Vector2( 526, -58.5519 )
states/Fly/node = SubResource( 73 )
states/Fly/position = Vector2( 526, 229.421 )
states/Idle/node = SubResource( 98 )
states/Idle/position = Vector2( 315.213, 145.421 )
states/Landing/node = SubResource( 77 )
states/Landing/position = Vector2( 315.213, 229.421 )
states/Peck/node = SubResource( 79 )
states/Peck/position = Vector2( 53.213, 145.421 )
states/Takeoff/node = SubResource( 81 )
states/Takeoff/position = Vector2( 315.213, -16.5519 )
transitions = [ "Peck", "Takeoff", SubResource( 82 ), "Landing", "Peck", SubResource( 83 ), "Takeoff", "Fly", SubResource( 84 ), "Fly", "Landing", SubResource( 85 ), "Fly", "Dead", SubResource( 86 ), "Landing", "Dead", SubResource( 87 ), "Peck", "Dead", SubResource( 88 ), "Takeoff", "Dead", SubResource( 89 ), "Caw", "Takeoff", SubResource( 90 ), "Caw", "Peck", SubResource( 91 ), "Peck", "Caw", SubResource( 92 ), "Landing", "Caw", SubResource( 93 ), "Caw", "Dead", SubResource( 94 ), "Landing", "Idle", SubResource( 99 ), "Idle", "Takeoff", SubResource( 100 ), "Idle", "Dead", SubResource( 101 ), "Peck", "Idle", SubResource( 102 ), "Caw", "Idle", SubResource( 103 ), "Idle", "Caw", SubResource( 104 ), "Idle", "Peck", SubResource( 105 ) ]
start_node = "Caw"
graph_offset = Vector2( -234.787, -72.4119 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=96]

[sub_resource type="CircleShape2D" id=64]
radius = 14.0

[sub_resource type="CircleShape2D" id=65]
radius = 15.0

[sub_resource type="CircleShape2D" id=66]
radius = 15.0

[sub_resource type="CircleShape2D" id=67]
radius = 28.0

[sub_resource type="CircleShape2D" id=68]
radius = 12.0

[sub_resource type="CircleShape2D" id=69]
radius = 5.0

[node name="Crow" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -6 )
texture = ExtResource( 16 )
offset = Vector2( 0, -12 )
hframes = 12
vframes = 2
frame = 12

[node name="AnimatedSpriteEye" type="AnimatedSprite" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
light_mask = 0
material = SubResource( 2 )
z_index = 1
frames = SubResource( 27 )
frame = 13
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 28 )

[node name="CrowStats" parent="." instance=ExtResource( 12 )]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Caw = SubResource( 106 )
anims/Dead = SubResource( 29 )
anims/Fly = SubResource( 30 )
anims/Idle = SubResource( 31 )
anims/Landing = SubResource( 32 )
anims/Peck = SubResource( 33 )
anims/StartFlashing = SubResource( 34 )
anims/StopFlashing = SubResource( 35 )
anims/Takeoff = SubResource( 36 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 95 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 96 )
parameters/Caw/TimeScale/scale = 1.0
parameters/Dead/TimeScale/scale = 1.0
parameters/Fly/TimeScale/scale = 1.0
parameters/Idle/TimeScale/scale = 1.0
parameters/Landing/TimeScale/scale = 1.0
parameters/Peck/TimeScale/scale = 1.0
parameters/Takeoff/TimeScale/scale = 1.0

[node name="Talkbox" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talkbox"]
position = Vector2( 0, -9 )
shape = SubResource( 64 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -4 )
collision_mask = 4
damage = 16.0
accuracy = 4.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 65 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 4 )
collision_layer = 8
script = ExtResource( 14 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 66 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
scale = Vector2( 3, 3 )
script = ExtResource( 18 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 67 )

[node name="AttackController" parent="." instance=ExtResource( 2 )]
visible = false

[node name="AttackPlayerZone" parent="." instance=ExtResource( 8 )]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AttackPlayerZone" index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 68 )

[node name="AttackTimer" type="Timer" parent="AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 69 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="TakeoffTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
max_distance = 320.0
attenuation = 0.4

[node name="EnemyHealth" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -4, -4, 8, 8 )

[connection signal="no_health" from="CrowStats" to="." method="_on_CrowStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="AttackPlayerZone/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="AttackPlayerZone"]
[editable path="SoftCollision"]
